Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115557

Missing type "QQuickTapHandler::ExclusiveSignals" in property

    XMLWordPrintable

Details

    • 107d1be70 (dev), c4cb4dc45 (6.6), 935905607 (6.5)

    Description

      There is an enumeration "QQuickTapHandler::ExclusiveSignals". Mind the missing s.

          Property {
                  name: "exclusiveSignals"
                  revision: 1541
                  type: "QQuickTapHandler::ExclusiveSignals"
                  read: "exclusiveSignals"
                  write: "setExclusiveSignals"
                  notify: "exclusiveSignalsChanged"
                  index: 5
              }
      

      Attachments

        For Gerrit Dashboard: QTBUG-115557
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            bubke Marco Bubke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes