QQuickTapHandler: Pass flag to Q_FLAG instead of enum

Amends d3f2c6ac4205bbe5a1c7174965dbce6f90972be3

Fixes: QTBUG-115557
Change-Id: Ibd8e79bcb6bfec292bff12e8d4f166c0b4b6ba56
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 107d1be707d89432c3fe5a93c13df236bd95f75b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>